authentication and role handling on web app added

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,22 +1,31 @@
 <mat-sidenav-container>
-  <mat-toolbar color="primary">
+  <mat-toolbar *ngIf="authService.isLoggedIn" color="primary">
     <button mat-icon-button *ngIf="handsetPortrait" (click)="menu.toggle()" matTooltip="Menu">
       <mat-icon>menu</mat-icon>
     </button>
     <div *ngIf="!handsetPortrait">
-      <a *ngFor="let item of navigationList" mat-button [routerLink]="item.link" routerLinkActive="active">{{item.name}}</a>
+      <span *ngFor="let item of navigationList">
+        <a *ngIf="item.permission == 'all' || item.permission == authService.role" mat-button [routerLink]="item.link" routerLinkActive="active">{{item.name}}</a>
+      </span>
     </div>
     <span class="flex-spacer"></span>
-    <mat-icon [matMenuTriggerFor]="language">language</mat-icon>
-    <mat-menu #language="matMenu">
-      <button mat-menu-item (click)="showNotImplemented()">English</button>
-      <button mat-menu-item (click)="showNotImplemented()">Українська</button>
-    </mat-menu>
+    <button mat-icon-button>
+      <mat-icon [matMenuTriggerFor]="language" matTooltip="Language">language</mat-icon>
+      <mat-menu #language="matMenu">
+        <button mat-menu-item (click)="showNotImplemented()">English</button>
+        <button mat-menu-item (click)="showNotImplemented()">Українська</button>
+      </mat-menu>
+    </button>
+    <button mat-icon-button (click)="authService.logout()" matTooltip="Logout">
+      <mat-icon>exit_to_app</mat-icon>
+    </button>
   </mat-toolbar>
   <mat-sidenav #menu>
     <h3 mat-subheader>Menu</h3>
     <mat-nav-list>
-      <a *ngFor="let item of navigationList" mat-list-item [routerLink]="item.link" routerLinkActive="active" (click)="menu.toggle()">{{item.name}}<div class="flex-spacer"></div><mat-icon>{{item.icon}}</mat-icon></a>
+      <span *ngFor="let item of navigationList">
+        <a *ngIf="item.permission == 'all' || item.permission == authService.role" mat-list-item [routerLink]="item.link" routerLinkActive="active" (click)="menu.toggle()">{{item.name}}<div class="flex-spacer"></div><mat-icon>{{item.icon}}</mat-icon></a>
+      </span>
     </mat-nav-list>
   </mat-sidenav>
   <router-outlet></router-outlet>
