--- a/web/src/app/users/user-details/user-details.component.html
+++ b/web/src/app/users/user-details/user-details.component.html
@@ -2,8 +2,8 @@
   <mat-card-title>User preview</mat-card-title>
   <mat-progress-bar mode="indeterminate" *ngIf="!user"></mat-progress-bar>
   <mat-card-content *ngIf="user">
-    <button mat-raised-button color="primary" (click)="removeUser()">Remove</button>
-    <a mat-raised-button color="primary" [routerLink]="'/user/edit/' + user._id" routerLinkActive="active">Edit</a>
+    <button *ngIf="authService.role == 'admin'" mat-raised-button color="primary" (click)="removeUser()">Remove</button>
+    <a *ngIf="authService.role == 'admin'" mat-raised-button color="primary" [routerLink]="'/user/edit/' + user._id" routerLinkActive="active">Edit</a>
     <p><b class="label">Name:</b>{{user.name}}</p>
     <p><b class="label">Email:</b>{{user.email}}</p>
     <p><b class="label">Role:</b>{{user.role}}</p>
