--- a/web/src/app/users/user-list/user-list.component.html
+++ b/web/src/app/users/user-list/user-list.component.html
@@ -34,7 +34,7 @@
           <a mat-icon-button [routerLink]="'/user/' + element._id" routerLinkActive="active" matTooltip="View" matTooltipPosition="left">
             <mat-icon>account_circle</mat-icon>
           </a>
-          <a mat-icon-button [routerLink]="'/user/edit/' + element._id" routerLinkActive="active" matTooltip="Edit" matTooltipPosition="right">
+          <a *ngIf="authService.role == 'admin'" mat-icon-button [routerLink]="'/user/edit/' + element._id" routerLinkActive="active" matTooltip="Edit" matTooltipPosition="right">
             <mat-icon>edit</mat-icon>
           </a>
         </mat-cell>
