token refreshing added

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -16,7 +16,7 @@
         <button mat-menu-item (click)="showNotImplemented()">Українська</button>
       </mat-menu>
     </button>
-    <button mat-icon-button (click)="authService.logout()" matTooltip="Logout">
+    <button mat-icon-button (click)="logout()" matTooltip="Logout">
       <mat-icon>exit_to_app</mat-icon>
     </button>
   </mat-toolbar>
