--- a/web/src/app/dashboard/dashboard.component.html
+++ b/web/src/app/dashboard/dashboard.component.html
@@ -31,9 +31,9 @@
 </div>
 <mat-card>
   <h3>UI</h3>
-  <img class="logo-img" [src]="apiUrl + 'images/angular-icon.png'">
+  <img class="logo-img" [src]="staticUrl + 'images/angular-icon.png'">
   <h3>Server</h3>
-  <img class="logo-img" [src]="apiUrl + 'images/node-icon.png'">
+  <img class="logo-img" [src]="staticUrl + 'images/node-icon.png'">
   <h3>Database</h3>
-  <img class="logo-img" [src]="apiUrl + 'images/mongodb-icon.png'">
+  <img class="logo-img" [src]="staticUrl + 'images/mongodb-icon.png'">
 </mat-card>
